# Flog

./: CMakeLists.txt  README.md
include/: flog.h
src/flog/: CMakeLists.txt  flog.c
src/main/: CMakeLists.txt  main.c
